# novel-factory

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PANGU_ARCH.md  PROJECT_PORTFOLIO.md  README.md  RESUME.md  analyze_refs.py  deep_search_refs.py  docker-compose.yml  feishu_config.json  mcp_server.py  pangu.py  pangu_bridge.py  pangu_dashboard.py  pangu_intelligence.py  pangu_optimized.py  pangu_pipeline.py  pangu_plus.py  pangu_workshop.py  pangu_workshop_smart.py  pyproject.toml  pytest.ini  requirements.txt  start_pangu.bat  使用指南.md  使用说明.md  双AI协作报告.md  对话模板.md  系统优缺点分析报告.md
.claude-plugin/: marketplace.json
_cache/: cross_project_cache.json
backend/: app.py  app_v7.py  generate_novel_libraries.py  monitoring.py  observability.py  rag_engine.py  state_tracker.py  style_library.py  task_queue.py  textgrad_opt.py
backend-java/: mvnw.cmd  pom.xml
dashboard/: generate_dashboard.py  index.html  深渊猎人.html
dashboard-node/: package-lock.json  package.json  server.js
docs/: API_SPEC.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  REFACTORING_ROADMAP.md  SPEC.md  architecture-design.md  class-diagram.mermaid  prd-architecture-optimization.md  sequence-diagram.mermaid  t02-architecture.md  小说创作指南.md  盘古AI系统技术报告.md  盘古AI系统架构分析报告_2026-06-11.md  盘古模型总体报告.md
knowledge/: __init__.py  arc_planner.py  article_materials.json  chapter_analyzer.py  creative_engine.py  creative_engine_schema.sql  db_manager.py  db_schema.sql  db_schema_v2.sql  dynamic_scorer.py  emotion_chain.py  import_chapters.py  import_novels.py  novel_reference.db-shm  novel_reference.db-wal  organize_database.py  pangu_math_core.py  personality_model.py  platform_writing_profiles.json  quality_10d.py  (+21 more)
(+436 files in other folders)
