[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pangu-ai"
version = "2.0.0"
description = "盘古AI — 企业级小说写作系统 · 治愈系·情绪释放·电影质感"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "盘古AI"}]
requires-python = ">=3.10"
keywords = ["novel", "writing", "ai", "chinese", "fiction", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.28",
    "python-dotenv>=1.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
math = ["numpy>=1.24"]
mcp = ["mcp>=1.0"]
server = ["fastapi>=0.109", "uvicorn>=0.27", "celery>=5.3", "redis>=5.0"]
db = ["psycopg2-binary>=2.9", "pgvector>=0.2"]
web = ["streamlit>=1.31"]
all = [
    "pangu-ai[math,mcp,server,db,web]",
]

[project.scripts]
pangu = "pangu_workshop:main"
pangu-smart = "pangu_workshop_smart:main"
pangu-mcp = "mcp_server:main"

[project.urls]
Homepage = "https://github.com/pangu-ai/pangu"
Documentation = "https://pangu-ai.readthedocs.io"
Repository = "https://github.com/pangu-ai/pangu"

[tool.setuptools.packages.find]
include = ["pangu_core*", "pangu_math*", "pangu_analytics*", "pangu_project*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"
